--- a/multi-source-kustomize/app/multi-source-app.yaml
+++ b/multi-source-kustomize/app/multi-source-app.yaml
@@ -4,7 +4,7 @@ metadata:
   name: multi-source-kustomize
   namespace: argocd
   annotations:
-    argocd-image-updater.argoproj.io/image-list: busybox=busybox:1.36.x
+    argocd-image-updater.argoproj.io/image-list: nginx=nginx:1.16.x
     argocd-image-updater.argoproj.io/update-strategy: semver
     argocd-image-updater.argoproj.io/force-update: "true"
   finalizers:
