--- a/multi-source-kustomize/source1/deployment.yaml
+++ b/multi-source-kustomize/source1/deployment.yaml
@@ -13,6 +13,6 @@ spec:
         app: multi-source-kustomize
     spec:
       containers:
-      - name: busybox
-        image: busybox:1.36.0
+      - name: nginx
+        image: nginx:1.16.0
         restartPolicy: OnFailure
