fix the app name in single-source-app
Signed-off-by: Cheng Fang <cfang@redhat.com>

--- a/multi-source-kustomize/app/single-source-app.yaml
+++ b/multi-source-kustomize/app/single-source-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: multi-source-kustomize
+  name: single-source-kustomize
   namespace: argocd
   annotations:
     argocd-image-updater.argoproj.io/image-list: nginx=nginx:1.16.0
@@ -17,7 +17,7 @@ spec:
   source:
       repoURL: https://github.com/chengfang/image-updater-examples.git
       targetRevision: main
-      path: multi-source-kustomize/source1
+      path: single-source-kustomize/source1
   syncPolicy:
     automated:
       prune: true
