move labels from deployment.yaml to kustomization.yaml in kustomization-write-target app
Signed-off-by: Cheng Fang <cfang@redhat.com>

--- a/kustomization-write-target/source/kustomization.yaml
+++ b/kustomization-write-target/source/kustomization.yaml
@@ -1,2 +1,7 @@
 resources:
   - deployment.yaml
+labels:
+  - includeSelectors: true
+    includeTemplates: true
+    pairs:
+      app: kustomization-write-target
