build: automatic update of app1
updates image nginx tag '1.10.0' to '1.11.13'

--- a/app-of-apps/source/overlays/app1/kustomization.yaml
+++ b/app-of-apps/source/overlays/app1/kustomization.yaml
@@ -1,8 +1,11 @@
 resources:
-  - ../../base
+- ../../base
 nameSuffix: "1"
 labels:
-  - includeSelectors: true
-    includeTemplates: true
-    pairs:
-      app: app1
+- includeSelectors: true
+  includeTemplates: true
+  pairs:
+    app: app1
+images:
+- name: nginx
+  newTag: 1.11.13
