build: automatic update of app2
updates image nginx tag '1.10.0' to '1.12.2'

--- a/app-of-apps/source/overlays/app2/kustomization.yaml
+++ b/app-of-apps/source/overlays/app2/kustomization.yaml
@@ -1,8 +1,11 @@
 resources:
-  - ../../base
+- ../../base
 nameSuffix: "2"
 labels:
-  - includeSelectors: true
-    includeTemplates: true
-    pairs:
-      app: app2
+- includeSelectors: true
+  includeTemplates: true
+  pairs:
+    app: app2
+images:
+- name: nginx
+  newTag: 1.12.2
