--- a/app-of-apps/apps/app1.yaml
+++ b/app-of-apps/apps/app1.yaml
@@ -7,8 +7,7 @@ metadata:
     argocd-image-updater.argoproj.io/image-list: nginx=nginx:1.11.x
     argocd-image-updater.argoproj.io/update-strategy: semver
     argocd-image-updater.argoproj.io/force-update: "false"
-    argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
-    argocd-image-updater.argoproj.io/write-back-target: kustomization
+    argocd-image-updater.argoproj.io/write-back-method: argocd
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
