change write-back-method to git in appset sample
Signed-off-by: Cheng Fang <cfang@redhat.com>

--- a/appset/appset.yaml
+++ b/appset/appset.yaml
@@ -21,7 +21,8 @@ spec:
         argocd-image-updater.argoproj.io/image-list: nginx=nginx:{{versionConstraint}}
         argocd-image-updater.argoproj.io/update-strategy: semver
         argocd-image-updater.argoproj.io/force-update: "false"
-        argocd-image-updater.argoproj.io/write-back-method: argocd
+        argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
+        argocd-image-updater.argoproj.io/write-back-target: kustomization
       finalizers:
         - resources-finalizer.argocd.argoproj.io
     spec:
