--- a/appset/appset.yaml
+++ b/appset/appset.yaml
@@ -13,6 +13,9 @@ spec:
           - appName: app2
             url: https://kubernetes.default.svc
             versionConstraint: "1.12.x"
+  ignoreApplicationDifferences:
+    - jsonPointers:
+        - /spec/source/kustomize/images
   template:
     metadata:
       name: '{{appName}}'
@@ -21,8 +24,6 @@ spec:
         argocd-image-updater.argoproj.io/image-list: nginx=nginx:{{versionConstraint}}
         argocd-image-updater.argoproj.io/update-strategy: semver
         argocd-image-updater.argoproj.io/force-update: "false"
-        argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
-        argocd-image-updater.argoproj.io/write-back-target: kustomization
       finalizers:
         - resources-finalizer.argocd.argoproj.io
     spec:
