--- a/write-helmvalues/source2/values.yaml
+++ b/write-helmvalues/source2/values.yaml
@@ -1,7 +1,7 @@
 image:
   registry: docker.io
-  repository: bitnami/nginx
-  tag: 1.27.1
+  repository: docker.io/bitnami/nginx
+  tag: 1.27.2
 env:
-  - name: ENVIRONMENT
-    value: production
+- name: ENVIRONMENT
+  value: production
