--- a/image-list-kustomize/app/image-list-kustomize.yaml
+++ b/image-list-kustomize/app/image-list-kustomize.yaml
@@ -9,6 +9,7 @@ metadata:
     argocd-image-updater.argoproj.io/nginx.platforms: linux/arm64,linux/amd64
     argocd-image-updater.argoproj.io/nginx2.platforms: linux/arm64,linux/amd64
     argocd-image-updater.argoproj.io/force-update: "false"
+    argocd-image-updater.argoproj.io/write-back-method: git:secret:argocd/git-creds
   finalizers:
     - resources-finalizer.argocd.argoproj.io
 spec:
